--- a/dot_config/ncmpcpp/config
+++ b/dot_config/ncmpcpp/config
@@ -183,23 +183,23 @@ message_delay_time = 1
 ## Note: colors can be nested.
 ##
 #
-song_list_format = {$4%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
-#
-song_status_format = $b{{$8"%t"}} $3by {$4%a{ $3in $7%b{ (%y)}} $3}|{$8%f}
-#
-song_library_format = {%n - }{%t}|{%f}
-#
-alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
-#
-alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
-#
-current_item_prefix = $(cyan)$r$b
-#
-current_item_suffix = $/r$(end)$/b
-#
-current_item_inactive_column_prefix = $(magenta)$r
-#
-current_item_inactive_column_suffix = $/r$(end)
+#song_list_format = {$4%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
+##
+#song_status_format = $b{{$8"%t"}} $3by {$4%a{ $3in $7%b{ (%y)}} $3}|{$8%f}
+##
+#song_library_format = {%n - }{%t}|{%f}
+##
+#alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
+##
+#alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
+##
+#current_item_prefix = $(cyan)$r$b
+##
+#current_item_suffix = $/r$(end)$/b
+##
+#current_item_inactive_column_prefix = $(magenta)$r
+##
+#current_item_inactive_column_suffix = $/r$(end)
 #
 #now_playing_prefix = $b
 #
