--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -58,3 +58,5 @@
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
     - [./gen_scripts_readme.sh]
+    - [pacman -Qnq >pacman_native]
+    - [pacman -Qmq >pacman_foreign]
