--- a/dot_config/gtk-3.0/settings.ini
+++ b/dot_config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Dracula
+gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=breeze-dark
 gtk-font-name=Source Han Sans 11
 gtk-cursor-theme-name=Adwaita
