--- a/dot_config/picom.conf
+++ b/dot_config/picom.conf
@@ -1,3 +1,4 @@
+# vim:filetype=config:tw=80:et
 log-level = "warn";
 
 shadow = false;
@@ -26,7 +27,8 @@ blur:
 blur-background-exclude = [
   "class_g = 'slop'",
 	"class_g = 'Firefox' && argb",
-	"window_type = 'dock'",
+  "class_g = 'xsecurelock-dimmer'",
+  "window_type = 'dock'",
 	"window_type = 'desktop'"
 ];
 
