--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -4,19 +4,31 @@
   <!-- Set preferred serif, sans-serif, and monospace fonts. -->
   <alias>
     <family>serif</family>
-    <prefer><family>Source Serif Pro</family></prefer>
+    <prefer>
+      <family>Source Serif Pro</family>
+      <family>Twemoji</family>
+    </prefer>
   </alias>
   <alias>
     <family>sans-serif</family>
-    <prefer><family>Source Sans Pro</family></prefer>
+    <prefer>
+      <family>Source Sans Pro</family>
+      <family>Twemoji</family>
+    </prefer>
   </alias>
   <alias>
     <family>sans</family>
-    <prefer><family>Source Sans Pro</family></prefer>
+    <prefer>
+      <family>Source Sans Pro</family>
+      <family>Twemoji</family>
+    </prefer>
   </alias>
   <alias>
     <family>monospace</family>
-    <prefer><family>Victor Code Pro</family></prefer>
+    <prefer>
+      <family>Victor Code Pro</family>
+      <family>Symbola</family>
+    </prefer>
   </alias>
 
   <!-- Aliases for commonly used MS fonts. -->
