Add: gpg sign thing

--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -3,6 +3,8 @@
 [user]
   email = joaocosta.work@posteo.net
   name = JoaoCostaIFG
+[commit]
+  gpgsign = true
 [color]
   ui = true
   status = auto
