--- a/dot_config/nvim/coc-settings.json
+++ b/dot_config/nvim/coc-settings.json
@@ -1,6 +1,5 @@
 {
   "coc.preferences.extensionUpdateCheck": "never",
-
   "diagnostic.errorSign": "!",
   "diagnostic.warningSign": ".",
   "diagnostic.infoSign": "?",
@@ -13,35 +12,21 @@
   "suggest.disableKind": true,
   "suggest.disableMenu": true,
   "session.directory": "~/.local/share/nvim/sessions/",
-
   "python.linting.flake8Enabled": true,
-  "python.linting.flake8Args": ["--ignore=E501"],
+  "python.linting.flake8Args": [
+    "--ignore=E501"
+  ],
   "python.formatting.provider": "black",
-
-  "diagnostic-languageserver.linters": {
-    "proselint": {
-      "command": "proselint",
-      "debounce": 300,
-      "args": ["-j"],
-      "sourceName": "proselint",
-      "parseJson": {
-        "errorsRoot": "data.errors",
-        "line": "line",
-        "column": "column",
-        "message": "${message} [check: ${check}] [replacement: ${replacements}]",
-        "security": "severity"
-      },
-      "securities": {
-        "error": "error",
-        "warning": "warning",
-        "info": "suggestion"
-      }
-    }
-  },
+  "diagnostic-languageserver.linters": {},
   "diagnostic-languageserver.formatters": {
     "prettier": {
       "command": "prettier",
-      "args": ["--prose-wrap", "always", "--stdin-filepath", "%filepath"],
+      "args": [
+        "--prose-wrap",
+        "always",
+        "--stdin-filepath",
+        "%filepath"
+      ],
       "rootPatterns": [
         ".prettierrc",
         ".prettierrc.json",
@@ -58,36 +43,70 @@
     }
   },
   "diagnostic-languageserver.filetypes": {
-    "bash": ["shellcheck"],
-    "mail": ["proselint"],
-    "markdown": ["proselint"],
-    "sh": ["shellcheck"],
-    "tex": ["proselint"],
-    "text": ["proselint"]
+    "bash": [
+      "shellcheck"
+    ],
+    "sh": [
+      "shellcheck"
+    ]
   },
   "diagnostic-languageserver.formatFiletypes": {
-    "bash": ["shfmt"],
-    "c": ["clang-format"],
-    "cpp": ["clang-format"],
-    "css": ["prettier"],
-    "dart": ["dartfmt"],
-    "html": ["prettier"],
-    "java": ["clang-format"],
-    "javascript": ["prettier"],
-    "json": ["prettier"],
-    "markdown": ["prettier"],
-    "php": ["phpcbf"],
+    "bash": [
+      "shfmt"
+    ],
+    "c": [
+      "clang-format"
+    ],
+    "cpp": [
+      "clang-format"
+    ],
+    "css": [
+      "prettier"
+    ],
+    "dart": [
+      "dartfmt"
+    ],
+    "html": [
+      "prettier"
+    ],
+    "java": [
+      "clang-format"
+    ],
+    "javascript": [
+      "prettier"
+    ],
+    "json": [
+      "prettier"
+    ],
+    "markdown": [
+      "prettier"
+    ],
+    "php": [
+      "phpcbf"
+    ],
     //"python": ["black"],
-    "sh": ["tchutcha"],
-    "tex": ["latexindent"],
-    "text": ["SimpFormat"],
-    "xml": ["xmllint"]
+    "sh": [
+      "shfmt"
+    ],
+    "tex": [
+      "latexindent"
+    ],
+    "text": [
+      "SimpFormat"
+    ],
+    "xml": [
+      "xmllint"
+    ]
   },
-
   "languageserver": {
     "ccls": {
       "command": "ccls",
-      "filetypes": ["c", "cpp", "objc", "objcpp"],
+      "filetypes": [
+        "c",
+        "cpp",
+        "objc",
+        "objcpp"
+      ],
       "rootPatterns": [
         ".ccls",
         "compile_commands.json",
@@ -103,7 +122,9 @@
     },
     "zls": {
       "command": "zls",
-      "filetypes": ["zig"]
+      "filetypes": [
+        "zig"
+      ]
     }
   }
 }
