--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -66,5 +66,5 @@
     - [git submodule update --init --recursive, Installing submodules]
     - [update-desktop-database ~/.local/share/applications/, Updating desktop entries database]
     - [./gen_scripts_readme.sh, Generating scripts Readme]
-    - [pacman -Qenq >pacman_native, Saving native package list]
-    - [pacman -Qemq >pacman_foreign, Saving foreign package list]
+    - [pacman -Qenq | sort >pacman_native, Saving native package list]
+    - [pacman -Qemq | sort >pacman_foreign, Saving foreign package list]
