--- a/dot_config/nvim/coc-settings.json
+++ b/dot_config/nvim/coc-settings.json
@@ -6,27 +6,45 @@
   "diagnostic.hintSign": "💡",
   "suggest.enablePreview": true,
   "suggest.labelMaxLength": 60,
-  "suggest.maxCompleteItemCount": 20,
+  "suggest.maxCompleteItemCount": 25,
   "suggest.minTriggerInputLength": 2,
   "suggest.snippetIndicator": " ►",
   "suggest.disableKind": true,
   "suggest.disableMenu": true,
   "session.directory": "~/.local/share/nvim/sessions/",
   "python.linting.flake8Enabled": true,
-  "python.linting.flake8Args": [
-    "--ignore=E501"
-  ],
+  "python.linting.flake8Args": ["--ignore=E501"],
   "python.formatting.provider": "black",
-  "diagnostic-languageserver.linters": {},
+  "diagnostic-languageserver.linters": {
+    "shellcheck": {
+      "command": "shellcheck",
+      "debounce": 100,
+      "args": ["--format", "json", "-"],
+      "sourceName": "shellcheck",
+      "parseJson": {
+        "line": "line",
+        "column": "column",
+        "endLine": "endLine",
+        "endColumn": "endColumn",
+        "message": "${message} [${code}]",
+        "security": "level"
+      },
+      "securities": {
+        "error": "error",
+        "warning": "warning",
+        "info": "info",
+        "style": "hint"
+      }
+    }
+  },
+  "diagnostic-languageserver.filetypes": {
+    "bash": ["shellcheck"],
+    "sh": ["shellcheck"]
+  },
   "diagnostic-languageserver.formatters": {
     "prettier": {
       "command": "prettier",
-      "args": [
-        "--prose-wrap",
-        "always",
-        "--stdin-filepath",
-        "%filepath"
-      ],
+      "args": ["--prose-wrap", "always", "--stdin-filepath", "%filepath"],
       "rootPatterns": [
         ".prettierrc",
         ".prettierrc.json",
@@ -40,91 +58,19 @@
         "prettier.config.js",
         "prettier.config.cjs"
       ]
+    },
+    "shfmt": {
+      "command": "shfmt"
     }
-  },
-  "diagnostic-languageserver.filetypes": {
-    "bash": [
-      "shellcheck"
-    ],
-    "sh": [
-      "shellcheck"
-    ]
   },
   "diagnostic-languageserver.formatFiletypes": {
-    "bash": [
-      "shfmt"
-    ],
-    "c": [
-      "clang-format"
-    ],
-    "cpp": [
-      "clang-format"
-    ],
-    "css": [
-      "prettier"
-    ],
-    "dart": [
-      "dartfmt"
-    ],
-    "html": [
-      "prettier"
-    ],
-    "java": [
-      "clang-format"
-    ],
-    "javascript": [
-      "prettier"
-    ],
-    "json": [
-      "prettier"
-    ],
-    "markdown": [
-      "prettier"
-    ],
-    "php": [
-      "phpcbf"
-    ],
-    //"python": ["black"],
-    "sh": [
-      "shfmt"
-    ],
-    "tex": [
-      "latexindent"
-    ],
-    "text": [
-      "SimpFormat"
-    ],
-    "xml": [
-      "xmllint"
-    ]
-  },
-  "languageserver": {
-    "ccls": {
-      "command": "ccls",
-      "filetypes": [
-        "c",
-        "cpp",
-        "objc",
-        "objcpp"
-      ],
-      "rootPatterns": [
-        ".ccls",
-        "compile_commands.json",
-        ".vim/",
-        ".git/",
-        ".hg/"
-      ],
-      "initializationOptions": {
-        "cache": {
-          "directory": ".ccls-cache"
-        }
-      }
-    },
-    "zls": {
-      "command": "zls",
-      "filetypes": [
-        "zig"
-      ]
-    }
+    "css": ["prettier"],
+    "html": ["prettier"],
+    "javascript": ["prettier"],
+    "json": ["prettier"],
+    "markdown": ["prettier"],
+
+    "bash": ["shfmt"],
+    "sh": ["shfmt"]
   }
 }
