Small change in vim for writting

--- a/dot_config/nvim/coc-settings.json
+++ b/dot_config/nvim/coc-settings.json
@@ -4,18 +4,17 @@
   "diagnostic.warningSign": ".",
   "diagnostic.infoSign": "?",
   "diagnostic.hintSign": "💡",
-  "suggest.enablePreview": true,
   "suggest.labelMaxLength": 60,
   "suggest.maxCompleteItemCount": 25,
   "suggest.minTriggerInputLength": 2,
   "suggest.snippetIndicator": " ►",
-  "suggest.disableKind": true,
-  "suggest.disableMenu": true,
   "session.directory": "~/.local/share/nvim/sessions/",
   "python.linting.flake8Enabled": true,
   "python.linting.flake8Args": ["--ignore=E501"],
   "python.formatting.provider": "black",
   "ltex.languageToolHttpServerUri": "https://languagetool.tail.joaocosta.dev",
+  "texlab.formatterLineLength": 75,
+  "texlab.latexindent.modifyLineBreaks": true,
   "diagnostic-languageserver.linters": {
     "shellcheck": {
       "command": "shellcheck",
