--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -81,6 +81,8 @@ bindsym $mod+Shift+Control+q exec swaynag -t warning -m 'You pressed the exit sh
 bindsym $mod+Shift+Control+r reload
 # kill focused window
 bindsym $alt+f4 kill
+# lock screen
+bindsym $mod+f12 exec swaylock -f -c 000000
 #
 ## Apps:
 # terminal
@@ -105,6 +107,23 @@ bindsym $mod+Shift+r exec firefox
 bindsym $mod+Control+s exec $term -e ncmpcpp
 bindsym $mod+Control+v exec drecord
 bindsym $mod+Control+w exec $term -e nvim
+# media
+bindsym $mod+f5 exec mpc toggle
+bindsym $mod+Shift+f5 exec mpc seek 0
+bindsym $mod+f6 exec mpc prev
+bindsym $mod+Shift+f6 exec mpc volume -5
+bindsym $mod+f7 exec mpc next
+bindsym $mod+Shift+f7 exec mpc volume +5
+bindsym $mod+Control+f5 exec notify-send -u low 'Current song' "$(mpc current)"
+bindsym $mod+f8 exec amixer set Master toggle
+bindsym $mod+Shift+f8 exec amixer set Capture toggle
+bindsym $mod+f9 exec amixer set Master 5%-
+bindsym $mod+f10 exec amixer set Master 5%+
+# notifications
+bindsym $mod+f11 exec dunst_toggle
+bindsym $mod+Control+backslash exec dunstctl close
+bindsym $mod+Control+Shift+backslash exec dunstctl close-all
+bindsym $mod+Control+space exec dunstctl history-pop
 # screenshot
 bindsym $mod+Print exec screenshots "current save"
 bindsym $mod+Shift+Print exec screenshots "snip"
