--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -125,8 +125,8 @@ bindsym $mod+Control+backslash exec dunstctl close
 bindsym $mod+Control+Shift+backslash exec dunstctl close-all
 bindsym $mod+Control+space exec dunstctl history-pop
 # screenshot
-bindsym $mod+Print exec screenshots "current save"
-bindsym $mod+Shift+Print exec screenshots "snip"
+bindsym $mod+Print exec screenshots "snip-edit"
+bindsym $mod+Shift+Print exec screenshots "current-save"
 bindsym $mod+Shift+s exec screenshots "snip"
 bindsym $mod+Control+Print exec screenshots
 ## Movement:
