--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -138,8 +138,8 @@ bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
 # tab
-bindsym $alt+Tab focus down
-bindsym Control+Tab focus up
+bindsym $alt+Tab focus next
+bindsym Control+Tab focus prev
 # move focused window
 bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$down move down
@@ -168,6 +168,7 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 #
+bindsym $mod+Tab workspace back_and_forth
 ## Layout stuff:
 # "split" the current object of focus with $mod+s or $mod+v, for horizontal and vertical splits
 bindsym $mod+s splith
