--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -4,44 +4,23 @@
     "modules-center": ["sway/window"],
     "modules-right": ["mpd", "pulseaudio", "battery", "cpu", "clock", "tray"],
     "sway/window": {
-        "max-length": 30
-    },
-    "battery": {
-        "format": "{capacity}% {icon}",
-        "format-icons": ["", "", "", "", ""]
-    },
-    "clock": {
-        "format-alt": "{:%a, %d. %b  %H:%M}",
-        "on-click-right": "alacritty -e nmtui"
-    },
-    "cpu": {
-        "interval": 10,
-        "format": "{}% ",
-        "max-length": 10,
-        "on-click": "alacritty -e top"
+        "max-length": 160
     },
     "mpd": {
         "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S})",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+        "format-disconnected": "<span face=\"Font Awesome 6 Free\"> </span> Disconnected",
+        "format-stopped": "<span face=\"Font Awesome 6 Free\"></span> Stopped",
         "interval": 10,
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ", // Icon grayed out when "random" is off
-            "on": " "
-        },
-        "repeat-icons": {
-            "on": " "
-        },
         "state-icons": {
             "paused": "",
             "playing": ""
         },
         "tooltip-format": "MPD (connected)",
-        "tooltip-format-disconnected": "MPD (disconnected)"
+        "tooltip-format-disconnected": "MPD (disconnected)",
+        "on-click-middle": "alacritty -e ncmpcpp"
     },
     "pulseaudio": {
-        "format": "{format_source} {volume}% {icon}",
-        "format-bluetooth": "{volume}% {icon}",
+        "format": "<span face=\"Font Awesome 6 Free\">{icon} {format_source}</span> {volume}%",
         "format-muted": "",
         "format-source": "",
         "format-source-muted": "",
@@ -58,6 +37,22 @@
         "on-click": "amixer set Capture toggle",
         "on-click-right": "amixer set Master toggle",
         "on-click-middle": "alacritty -e pulsemixer"
+    },
+    "battery": {
+        "format": "<span face=\"Font Awesome 6 Free\">{icon}</span> {capacity}%",
+        "format-icons": ["", "", "", "", ""],
+        "on-click": "notify-send 'Battery level' \"$(acpi -b)\""
+    },
+    "cpu": {
+        "interval": 10,
+        "format": "<span face=\"Font Awesome 6 Free\"></span> {}%",
+        "max-length": 10,
+        "on-click": "alacritty -e top"
+    },
+    "clock": {
+        "format": "<span face=\"Font Awesome 6 Free\"></span> {:%H:%M}",
+        "format-alt": "<span face=\"Font Awesome 6 Free\"></span> {:%a, %d. %b  %H:%M}",
+        "on-click-right": "alacritty -e nmtui"
     },
     "tray": {
         "icon-size": 16,
