--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -17,6 +17,8 @@
         },
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)",
+        "on-click": "mpc toggle",
+        "on-click-right": "mpc seek 0",
         "on-click-middle": "alacritty -e ncmpcpp"
     },
     "pulseaudio": {
