--- a/dot_config/vimiv/vimiv.conf
+++ b/dot_config/vimiv/vimiv.conf
@@ -2,7 +2,7 @@
 monitor_filesystem = True
 shuffle = False
 startup_library = True
-style = default
+style = base16-nord
 
 [COMMAND]
 history_limit = 100
