--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -42,9 +42,9 @@ exec_always xrandr --output $(xrandr | grep -m 1 XWAYLAND | awk '{print $1;}') -
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 exec swayidle -w \
-         timeout 600 'swaylock -f -c 000000' \
+         timeout 600 'swaylock -f --screenshots --clock --indicator-idle-visible --fade-in 10 --effect-greyscale --effect-blur 5x10 --grace 10' \
          timeout 660 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-         before-sleep 'swaylock -f -c 000000'
+         before-sleep 'swaylock -f --screenshots --clock --indicator-idle-visible --fade-in 10 --effect-greyscale --effect-blur 5x10 --grace 10'
 
 ### Input configuration
 #
