--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -6,9 +6,7 @@
 
 ### Variables
 #
-# Win key
 set $mod Mod4
-# Alt key
 set $alt Mod1
 # Home row direction keys, like vim
 set $left h
@@ -22,6 +20,7 @@ set $browser librewolf
 # preferred app launcher (pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on)
 set $menu mdmenu_run | xargs swaymsg exec --
+set $lockscreen swaylock -f --screenshots --clock --indicator-idle-visible --fade-in 10 --effect-greyscale --effect-blur 5x10 --grace 10
 
 ### Output configuration
 # wallpaper
@@ -42,9 +41,9 @@ exec_always xrandr --output $(xrandr | grep -m 1 XWAYLAND | awk '{print $1;}') -
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 exec swayidle -w \
-         timeout 600 'swaylock -f --screenshots --clock --indicator-idle-visible --fade-in 10 --effect-greyscale --effect-blur 5x10 --grace 10' \
+         timeout 600 $lockscreen \
          timeout 660 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-         before-sleep 'swaylock -f --screenshots --clock --indicator-idle-visible --fade-in 10 --effect-greyscale --effect-blur 5x10 --grace 10'
+         before-sleep $lockscreen
 
 ### Input configuration
 #
