--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -19,7 +19,9 @@
         "tooltip-format-disconnected": "MPD (disconnected)",
         "on-click": "mpc toggle",
         "on-click-right": "mpc seek 0",
-        "on-click-middle": "alacritty -e ncmpcpp"
+        "on-click-middle": "alacritty -e ncmpcpp",
+        "on-scroll-up": "mpc volume +5",
+        "on-scroll-down": "mpc volume -5"
     },
     "pulseaudio": {
         "format": "<span face=\"Font Awesome 6 Free\">{icon} {format_source}</span> {volume}%",
