--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -62,6 +62,8 @@ input type:pointer {
     accel_profile "flat"
 }
 
+exec swayless init
+
 ### Themeing
 # Import GTK 3 to gsettings
 exec_always import-gsettings
@@ -171,27 +173,43 @@ bindsym $mod+Shift+$right move right
 #
 ## Workspaces:
 # switch to workspace
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
+bindsym $mod+1 exec "swayless focus 1"
+bindsym $mod+2 exec "swayless focus 2"
+bindsym $mod+3 exec "swayless focus 3"
+bindsym $mod+4 exec "swayless focus 4"
+bindsym $mod+5 exec "swayless focus 5"
+bindsym $mod+6 exec "swayless focus 6"
+bindsym $mod+7 exec "swayless focus 7"
+bindsym $mod+8 exec "swayless focus 8"
+bindsym $mod+9 exec "swayless focus 9"
 # move to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-#
-bindsym $mod+Tab workspace back_and_forth
+bindsym $mod+Shift+1 exec "swayless move 1"
+bindsym $mod+Shift+2 exec "swayless move 2"
+bindsym $mod+Shift+3 exec "swayless move 3"
+bindsym $mod+Shift+4 exec "swayless move 4"
+bindsym $mod+Shift+5 exec "swayless move 5"
+bindsym $mod+Shift+6 exec "swayless move 6"
+bindsym $mod+Shift+7 exec "swayless move 7"
+bindsym $mod+Shift+8 exec "swayless move 8"
+bindsym $mod+Shift+9 exec "swayless move 9"
+# bring workspace here
+bindsym $mod+Control+1 exec "swayless move-workspace-here 1"
+bindsym $mod+Control+2 exec "swayless move-workspace-here 2"
+bindsym $mod+Control+3 exec "swayless move-workspace-here 3"
+bindsym $mod+Control+4 exec "swayless move-workspace-here 4"
+bindsym $mod+Control+5 exec "swayless move-workspace-here 5"
+bindsym $mod+Control+6 exec "swayless move-workspace-here 6"
+bindsym $mod+Control+7 exec "swayless move-workspace-here 7"
+bindsym $mod+Control+8 exec "swayless move-workspace-here 8"
+bindsym $mod+Control+9 exec "swayless move-workspace-here 9"
+# focus next/prev output
+bindsym $mod+Comma focus output left
+bindsym $mod+Period focus output right
+# move container to next/prev output
+bindsym $mod+Shift+Comma exec "swayless prev-output"
+bindsym $mod+Shift+Period exec "swayless next-output"
+# switch to the previous tab of the current output
+bindsym $mod+Tab exec "swayless alt-tab"
 ## Layout stuff:
 # "split" the current object of focus with $mod+s or $mod+v, for horizontal and vertical splits
 bindsym $mod+s splith
