Copilot is pretty cool

--- a/dot_config/nvim/coc-settings.json
+++ b/dot_config/nvim/coc-settings.json
@@ -71,5 +71,6 @@
     "markdown": ["prettier"],
     "bash": ["shfmt"],
     "sh": ["shfmt"]
-  }
+  },
+  "snippets.ultisnips.pythonPrompt": false
 }
