Small imv keybind changes

--- a/dot_config/imv/config
+++ b/dot_config/imv/config
@@ -16,7 +16,8 @@ q = quit
 # Image navigation
 <Left> = prev
 <bracketleft> = prev
-N = prev
+<Shift+N> = prev
+p = prev
 <Right> = next
 <bracketright> = next
 n = next
@@ -42,9 +43,10 @@ l = pan -50 0
 x = close
 f = fullscreen
 d = overlay
-p = exec echo $imv_current_file
+#p = exec echo $imv_current_file
 c = center
 <Shift+C> = exec wl-copy <"$imv_current_file"
+e = exec gimp "$imv_current_file"
 s = scaling next
 <Shift+S> = upscaling next
 a = zoom actual
