--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -3,6 +3,21 @@
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
     "modules-right": ["mpd", "pulseaudio", "battery", "cpu", "clock", "tray"],
+    "sway/workspaces": {
+        "disable-scroll": true,
+        "format-icons": {
+            "1": "🯱",
+            "2": "🯲",
+            "3": "🯳",
+            "4": "🯴",
+            "5": "🯵",
+            "6": "🯶",
+            "7": "🯷",
+            "8": "🯸",
+            "9": "🯹",
+            "0": "🯰",
+        }
+    },
     "sway/window": {
         "max-length": 160
     },
