--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -45,6 +45,9 @@ exec swayidle -w \
          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
          before-sleep $lockscreen
 
+# notification daemon (when already running, does nothing)
+exec_always swaync
+
 ### Input configuration
 #
 input type:keyboard {
@@ -144,10 +147,10 @@ bindsym XF86AudioNext+Shift exec playerctl volume 0.05+
 #
 bindsym XF86Search exec $menu
 ## Notifications:
-bindsym $mod+f11 exec dunst_toggle
-bindsym $mod+Control+backslash exec dunstctl close
-bindsym $mod+Control+Shift+backslash exec dunstctl close-all
-bindsym $mod+Control+space exec dunstctl history-pop
+bindsym $mod+f11 exec swaync-client -d -sw
+bindsym $mod+Control+backslash exec swaync-client --close-latest -sw
+bindsym $mod+Control+Shift+backslash exec swaync-client --close-all -sw
+bindsym $mod+Control+space exec swaync-client -t -sw
 ## screenshot
 bindsym $mod+Print exec screenshots "snip-edit"
 bindsym $mod+Shift+Print exec screenshots "current-save"
